testdata/invalid/bad_toml.grim
format = 1

title = "Bad TOML"

[[sections]
id = "broken"
title = "This TOML is malformed - missing closing bracket"
